--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "forkify-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist",
@@ -14,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
+    "core-js": "^3.36.1",
     "D": "^1.0.0",
     "json-server": "^1.0.0-alpha.21",
     "parcel": "^2.11.0",
+    "regenerator-runtime": "^0.14.1",
     "vitest": "^1.2.1"
   },
   "devDependencies": {
