--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "-": "^0.0.1",
     "core-js": "^3.36.1",
     "D": "^1.0.0",
+    "fractional": "^1.0.0",
     "json-server": "^1.0.0-alpha.21",
     "parcel": "^2.11.0",
     "regenerator-runtime": "^0.14.1",
